--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <div class="heading"><p>Equilibrium #3429</p></div>
     <div class="summary"><p>Our Equilibrium collection promotes balance and calm.</p></div>
     <div class="price--time-left">
-      <div class="price"><object alt="eth logo" data="./images/icon-ethereum.svg"></object><p>0.041 ETH</p></div>
-      <div class="time-left"><object alt="clock" data="./images/icon-clock.svg"></object><p>3 days left</p></div>
+      <div class="price"><object data="./images/icon-ethereum.svg"></object><p>0.041 ETH</p></div>
+      <div class="time-left"><object data="./images/icon-clock.svg"></object><p>3 days left</p></div>
     </div>
     <hr>
     <div class="creator-profile">
